--- a/style/_vars.scss
+++ b/style/_vars.scss
@@ -1,3 +1,13 @@
 $textColorBlack: #000000;
 $textColorWhith: #FFFFFF;
 $textColorRed: #BC1414;
+$textColorGray: #525252;
+
+$borderColorBtnWhith: #FFFFFF;
+$hoverOrangeText: orange;
+
+$backColorWhith: #F7F7F7;
+$backColorGray: #F8F8F8;
+$backColorBlack: #000000;
+
+$hoverOrangeBack: orange;
